The index page actually works now

--- a/resources/index/index.html
+++ b/resources/index/index.html
@@ -9,7 +9,7 @@
   <body>
     <h1>Speakeasy</h1>
     <div>
-      Discussion ID: <input id="disc_id" type="text" value="MathSoc"><br>
+      Discussion ID: <input id="disc_id" type="text"><br>
       <button onclick="joinDiscussion()">Start</button>
     </div>
   </body>
