Added points of order

--- a/resources/discussion/discussion.html
+++ b/resources/discussion/discussion.html
@@ -8,24 +8,31 @@
     <script src="/resources/discussion/buttons.js"></script>
   </head>
   <body>
-    <h1>Speakeasy</h1>
+    <h1 id="header"><div>Speakeasy</div></h1>
     <div id="speaking_order"></div>
-    <div id="add_speaker_controls">
-      <input id="speaker_name" type="text">
-      <button onclick="addSpeech(1)">1</button>
-      <button onclick="addSpeech(2)">2</button>
+    <div hidden id="point_of_order">
+      <div id="poo_message"><b><i>Point of Order!</i></b></div>
+      <button onclick="resolvePointOfOrder()">Resolve</button>
     </div>
-    <div id="show_master_controls" onclick="show_master_controls()">
-      <i><small>Show Master Controls</small></i>
-    </div>
-    <div hidden id="master_controls">
-      <button onclick="next()">Next Speaker</button>
-      <button onclick="previous()">Previous Speaker</button>
-      <br>
-      <select onchange="change_priority_mode()">
-        <option value="fcfs">First Come First Serve</option>
-        <option value="brevity">Prioritize Brief Speakers</option>
-      </select>
+    <div id="controls">
+      <div id="add_speaker_controls">
+        <input id="speaker_name" type="text">
+        <button onclick="addSpeech(1)">1</button>
+        <button onclick="addSpeech(2)">2</button>
+        <button onclick="pointOfOrder()">3</button>
+      </div>
+      <div id="show_master_controls" onclick="show_master_controls()">
+        <i><small>Show Master Controls</small></i>
+      </div>
+      <div hidden id="master_controls">
+        <button onclick="next()">Next Speaker</button>
+        <button onclick="previous()">Previous Speaker</button>
+        <br>
+        <select onchange="change_priority_mode()">
+          <option value="fcfs">First Come First Serve</option>
+          <option value="brevity">Prioritize Brief Speakers</option>
+        </select>
+      </div>
     </div>
   </body>
 </html>
