Implimented a new priority mode

--- a/resources/discussion/discussion.html
+++ b/resources/discussion/discussion.html
@@ -28,7 +28,7 @@
         <button onclick="next()">Next Speaker</button>
         <button onclick="previous()">Previous Speaker</button>
         <br>
-        <select onchange="change_priority_mode()">
+        <select onchange="change_priority_mode(this)">
           <option value="fcfs">First Come First Serve</option>
           <option value="brevity">Prioritize Brief Speakers</option>
         </select>
