Added name aliasing

--- a/resources/discussion/discussion.html
+++ b/resources/discussion/discussion.html
@@ -32,6 +32,12 @@
           <option value="fcfs">First Come First Serve</option>
           <option value="brevity">Prioritize Brief Speakers</option>
         </select>
+        <br>
+        <div id="alias_speakers">
+          <input id="name1" type="text">
+          <input id="name2" type="text">
+          <button onclick="aliasSpeakers()">Alias!</button>
+        </div>
       </div>
     </div>
   </body>
